--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,10 @@ runner/
 /dosgi/serverrunner
 /dosgi/clientrunner
 /cxf-discovery/displayControllerRunner
-<<<<<<< HEAD
 /cxf-discovery/remoteDisplayRunner
-/cxf-rest/greeter-rest/.idea
-=======
-/cxf-discovery/remoteDisplayRunner
+.idea/
+target/
+*.ipr
+*.iml
 /cxf-rest/client
 /cxf-rest/server
->>>>>>> Made shell scripts executable
