--- a/cxf-rest/greeter-rest/pom.xml
+++ b/cxf-rest/greeter-rest/pom.xml
@@ -1,23 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements. See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership. The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License. You may obtain a copy of the License at
+    <!--
+      Licensed to the Apache Software Foundation (ASF) under one
+      or more contributor license agreements. See the NOTICE file
+      distributed with this work for additional information
+      regarding copyright ownership. The ASF licenses this file
+      to you under the Apache License, Version 2.0 (the
+      "License"); you may not use this file except in compliance
+      with the License. You may obtain a copy of the License at
 
-  http://www.apache.org/licenses/LICENSE-2.0
+      http://www.apache.org/licenses/LICENSE-2.0
 
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied. See the License for the
-  specific language governing permissions and limitations
-  under the License.
--->
+      Unless required by applicable law or agreed to in writing,
+      software distributed under the License is distributed on an
+      "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+      KIND, either express or implied. See the License for the
+      specific language governing permissions and limitations
+      under the License.
+    -->
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ninedemons.cxf.dosgi.samples</groupId>
@@ -26,8 +27,37 @@
     <name>Distributed OSGI Greeter Rest including JSON Bundles</name>
     <version>1.0-SNAPSHOT</version>
 
-    <modules>    
-      <module>impl</module>
-    </modules> 
+    <modules>
+        <module>impl</module>
+        <module>client</module>
+        <module>interface</module>
+    </modules>
+    <properties>
+        <servicemix.specs.version>1.3.0</servicemix.specs.version>
+    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.core</artifactId>
+                <version>4.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.compendium</artifactId>
+                <version>4.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>jsr311-api</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.servicemix.specs</groupId>
+                <artifactId>org.apache.servicemix.specs.jsr311-api-1.0</artifactId>
+                <version>${servicemix.specs.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
