--- a/cxf-rest/greeter-rest/interface/pom.xml
+++ b/cxf-rest/greeter-rest/interface/pom.xml
@@ -43,9 +43,9 @@
           <artifactId>org.apache.servicemix.specs.jsr311-api-1.0</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-all.osgi</artifactId>
-            <version>2.1.6</version>
+            <groupId>org.apache.servicemix.specs</groupId>
+            <artifactId>org.apache.servicemix.specs.jaxb-api-2.1</artifactId>
+            <version>1.9.0</version>
         </dependency>
     </dependencies>
 
