Changed broken config save flag for file install

--- a/cxf-rest/config/rest-server/org.apache.felix.fileinstall-impl.cfg
+++ b/cxf-rest/config/rest-server/org.apache.felix.fileinstall-impl.cfg
@@ -4,6 +4,6 @@ felix.fileinstall.poll=500
 felix.fileinstall.log.level=4
 felix.fileinstall.bundles.new.start=true
 felix.fileinstall.bundles.startTransient=true
-felix.fileinstall.disableConfigSave = true
+felix.fileinstall.disableConfigSave = false
 felix.fileinstall.start.level = 20
 felix.fileinstall.filter = .*\\.jar
